--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -1,5 +1,29 @@
+.nav-bar {
+  height: 3em;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 2em;
+}
+
+.nav-bar > * {
+  display: flex;
+  align-items: center;
+}
+
+ul {
+  list-style-type: none;
+}
+
 .profile-dropdown {
-  position: absolute;
+
+}
+
+.search-bar {
+  height: 2em;
+  width: 30em;
+  padding: 1em;
+  background-color: lightgrey;
+  border-radius: 2em;
 }
 
 .hidden {
