--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -1,8 +1,8 @@
 .nav-bar {
+  padding: 1em;
   height: 3em;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 2em;
 }
 
 .nav-bar > * {
@@ -15,12 +15,28 @@ ul {
 }
 
 .profile-dropdown {
+  position: absolute;
+  z-index: 10;
+  right: 1em;
+  top: 3.5em;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: grey 0px 0px 12px;
+}
 
+.profile-dropdown-button > button {
+  border-radius: 50px;
+}
+
+.nav-bar form {
+  flex: .75 1;
 }
 
 .search-bar {
   height: 2em;
-  width: 30em;
+  width: 100%;
   padding: 1em;
   background-color: lightgrey;
   border-radius: 2em;
@@ -28,4 +44,27 @@ ul {
 
 .hidden {
   display: none;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  font-weight: bold;
+  color: #e60022;
+}
+
+.logo-img {
+  height: 64px;
+  width: 64px;
+}
+
+.nav-bar .active {
+  color: white;
+  background-color: black;
+}
+
+.nav-button {
+  padding: 1em;
+  border-radius: 50px;
 }
