--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,8 +1,34 @@
 /* TODO Add site wide styles */
 
+* {
+  font-family: Arial, Helvetica, sans-serif;
+  /* border: 1px solid red; */
+}
+
 a {
   color: inherit;
   text-decoration: none;
+}
+
+ul {
+  padding: 1em;
+}
+
+li {
+  list-style-type: none;
+}
+
+textarea {
+  resize: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+body {
+  margin: 0;
+  padding: 0;
 }
 
 :root {
@@ -13,7 +39,3 @@ a {
   --card_medium: 33;
   --card_large: 45;
 }
-
-/* * {
-  border: 1px solid red;
-} */
