--- a/react-app/src/pages/Home/Home.css
+++ b/react-app/src/pages/Home/Home.css
@@ -1,6 +1,28 @@
 .feed-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, var(--card_width));
-  grid-auto-rows: var(--row_increment);
+  grid-template-columns: repeat(auto-fit, minmax(10px, 300px));
   justify-content: center;
+  gap: 0.5%;
+}
+
+.feed-pin {
+  display: flex;
+  flex-direction: column;
+}
+
+.feed-pin img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+
+.splash-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.splash-content > * {
+  font-size: 50px;
 }
