--- a/react-app/src/pages/Profile/Profile.css
+++ b/react-app/src/pages/Profile/Profile.css
@@ -26,7 +26,7 @@
   grid-template-columns: 3fr 1fr;
 }
 
-.edit-pin-contents input {
+.edit-pin-contents input, .edit-pin-contents textarea {
   min-width: 60%
 }
 
@@ -34,6 +34,15 @@
   padding: 0em 1em;
   display: flex;
   flex-direction: column;
+}
+
+.edit-pin-contents-left input, .edit-pin-contents-left textarea {
+  border: 2px solid lightgrey;
+  border-radius: 8px;
+}
+
+.edit-pin-contents-left textarea {
+  resize: none;
 }
 
 .edit-pin-contents-left > * {
@@ -56,4 +65,26 @@
 .modal-buttons {
   display: flex;
   justify-content: space-between;
+}
+
+.profile-created-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
+  gap: 0.5%;
+  justify-content: center;
+}
+
+.created-pin {
+  display: flex;
+  flex-direction: column;
+}
+
+.created-pin img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+
+.profile-navbar .active {
+  border-bottom: 2px solid gray;
 }
