--- a/react-app/src/components/LoginFormModal/LoginForm.css
+++ b/react-app/src/components/LoginFormModal/LoginForm.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 1em;
 }
 
 .login-modal > form {
@@ -14,10 +15,43 @@
   flex-direction: column;
 }
 
+.login-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.login-form > label {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25em;
+}
+
+.login-form input {
+  padding: 0.5em;
+  border-radius: 10px;
+}
+
+.login-form input:focus {
+  box-shadow: 0 0 2px 4px #92c1ff;
+}
+
+.login-submit-button {
+  height: 3em;
+  background-color: #e60022;
+  color: white;
+  font-size: 14px;
+  border: none;
+  border-radius: 25px;
+}
+
 .demo-user-button {
-  margin: 2em;
-  font-size: 18px;
-  border-radius: 8px;
+  height: 3em;
+  width: 50%;
+  background-color: lightgray;
+  font-size: 14px;
+  border: none;
+  border-radius: 25px;
 }
 
 .demo-user-button:hover {
