--- a/react-app/src/pages/PinBuilder/PinBuilder.css
+++ b/react-app/src/pages/PinBuilder/PinBuilder.css
@@ -7,18 +7,20 @@
 }
 
 .pin-builder-panel {
-  min-height: 50vh;
-  width: 60vw;
+  min-height: 600px;
+  min-width: 600px;
+  max-height: 80vh;
+  max-width: 70vw;
   background-color: white;
   border-radius: 20px;
+  display: flex;
 }
 
 .pin-form {
-  padding: 2em;
-  height: 80%;
+  padding: 1.5em;
   display: grid;
-  gap: 1em;
   grid-template-columns: 1fr 3fr;
+  gap: 1em;
 }
 
 .file-upload-container {
@@ -82,5 +84,5 @@
   color: white;
   font-size: 14px;
   border: none;
-  border-radius: 5px;
+  border-radius: 25px;
 }
